--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
 <body>
   <div id="game"></div>
   <div id="frameCounter"></div>
+  <div id="elapsedTimeDiv"></div>
+  <div id="fpsDiv"></div>
   <div id="player"></div>
 </body>
 
