--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>Truxinator</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <script type="module" src='main.js'></script>
+  <link rel="stylesheet" type="text/css" href="./reset.css" media=”screen” />
 </head>
 
 <body>
