--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <div id="game"></div>
+  <input id="speedUp" type="range" min="0" max="3" value="1" />
   <div id="frameCounter"></div>
   <div id="elapsedTimeDiv"></div>
   <div id="fpsDiv"></div>
