not broken. Points service.

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <div id="frameCounter"></div>
   <div id="elapsedTimeDiv"></div>
   <div id="fpsDiv"></div>
+  <div id="pointsDiv"></div>
 </body>
 
 </html>
