not broken. started making GameOver service.

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
   <div id="elapsedTimeDiv"></div>
   <div id="fpsDiv"></div>
   <div id="pointsDiv"></div>
+  <div id="gameOverDiv"></div>
 </body>
 
 </html>
