--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,16 @@
 
 <body>
   <div id="game"></div>
+  <div id="gameHideRight"></div>
+  <div id="gameHideBottom"></div>
   <input id="speedUp" type="range" min="0" max="3" value="1" />
   <div id="frameCounter"></div>
   <div id="elapsedTimeDiv"></div>
   <div id="fpsDiv"></div>
   <div id="pointsDiv"></div>
-  <div id="gameOverDiv"></div>
+  <div id="gameOverDiv">
+    <div id="gameOverTextDiv" style="text-align: center; top: 110px; font-size: 30px; position: absolute; width: 100%">GAME OVER</div>
+  </div>
 </body>
 
 </html>
