not broken. hide enemies outside of gameDiv.

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,9 @@
   <div id="fpsDiv"></div>
   <div id="pointsDiv"></div>
   <div id="gameOverDiv">
-    <div id="gameOverTextDiv" style="text-align: center; top: 110px; font-size: 30px; position: absolute; width: 100%">GAME OVER</div>
+    <div id="gameOverTextDiv" style="text-align: center; top: 110px; font-size: 30px; position: absolute; width: 100%">
+      GAME OVER
+    </div>
   </div>
 </body>
 
