--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Truxinator</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <script type="module" src='src/main.js'></script>
+  <script type="module" src='dist/main.js'></script>
   <link rel="stylesheet" type="text/css" href="./reset.css" media=”screen” />
 </head>
 
