not broken. added new bgs with parallaxing.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-  <div id="game"></div>
+  <div id="layer1"></div>
+  <div id="layer2"></div>
   <div id="gameHideRight"></div>
   <div id="gameHideBottom"></div>
   <input id="speedUp" type="range" min="0" max="3" value="1" />
