--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
   <div id="layer1"></div>
   <div id="layer2"></div>
+  <div id="layer3"></div>
   <div id="gameHideRight"></div>
   <div id="gameHideBottom"></div>
   <input id="speedUp" type="range" min="0" max="3" value="1" />
