--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" type="text/css" href="./reset.css" />
+  <style>
+    body {
+      transform-origin: left top;
+      overflow: hidden;
+    }
+  </style>
   <title>Truxinator</title>
 </head>
 
