not broken. new awesome retro 8bit font.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" type="text/css" href="./reset.css" />
   <style>
+    @font-face {
+      font-family: "PixelMicro";
+      src: url("/fonts/PixelMicro.ttf");
+    }
+
+    * {
+      font-family: "PixelMicro" !important;
+      text-transform: uppercase;
+    }
+
     body {
       transform-origin: left top;
       overflow: hidden;
