--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
       transform: scale(1.05);
       color: rgba(255, 220, 190) !important;
     }
+
+    .listItem {
+      color: red !important;
+    }
     </style>
   <title>Schmupinator</title>
 </head>
