--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       transition-duration: 0.8s;
       color: red !important;
     }
-    .menuItem:hover {
+    .activeMenuItem {
       transition-duration: 0.3s;
       transform: scale(1.05);
       color: rgba(255, 220, 190) !important;
