hopefully did not break. changed paths of assets to make it when serviving in a subfolder instead of root.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     @font-face {
       font-family: "PixelMicro";
-      src: url("/fonts/PixelMicro.ttf");
+      src: url("/src/assets/fonts/PixelMicro.ttf");
     }
 
     * {
