--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 
 <head>
-  <base href="/schmupinator/" />
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+  <link rel="icon" type="image/svg+xml" href="/schmupinator/assets/favicon.17e50649.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
   <style>
     @font-face {
       font-family: "PixelMicro";
-      src: url("/fonts/PixelMicro.ttf");
+      src: url("/schmupinator/assets/PixelMicro.e7fba2b6.ttf");
     }
 
     * {
@@ -59,9 +58,9 @@
     }
     </style>
   <title>Schmupinator</title>
-  <script type="module" crossorigin src="/assets/index.dbb7d02e.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/vendor.3c737b28.js">
-  <link rel="stylesheet" href="/assets/index.1cf523b1.css">
+  <script type="module" crossorigin src="/schmupinator/assets/index.ef5bf8da.js"></script>
+  <link rel="modulepreload" crossorigin href="/schmupinator/assets/vendor.3c737b28.js">
+  <link rel="stylesheet" href="/schmupinator/assets/index.1cf523b1.css">
 </head>
 
 <body>
