not broken. tried to fix overflow: hidden for touch devices.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,16 @@
       line-height: 65% !important;
     }
 
+    html {
+      height: 100vh;
+      width: 100vw;
+      overflow: hidden;
+    }
+
     body {
       transform-origin: left top;
+      height: 100%;
+      width: 100%;
       overflow: hidden;
     }
 
